<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapter"
            type="com.dev.leo.testusers.adapter.UserListAdapter"/>
        <variable
            name="viewModel"
            type="com.dev.leo.testusers.ui.user_list.UserListViewModel"/>
        <variable
            name="textChangeListener"
            type="android.databinding.adapters.TextViewBindingAdapter.OnTextChanged"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:weightSum="2"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:text="@={viewModel.seedField}"
                android:inputType="text"
                android:maxLength="10"
                android:hint="@string/enter_seed"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_rectangle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="36dp" />
            <Button
                android:onClick="@{() -> viewModel.changeSeed()}"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.format(@string/current_seed, viewModel.seedField)}"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/current_seed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSearch"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seedLayout">

            <EditText
                android:onTextChanged="@{textChangeListener}"
                android:text="@={viewModel.queryField}"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rectangle"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLength="10" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.clearQuery()}"
                android:text="@string/clear" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adapter="@{adapter}"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearSearch"
            tools:listitem="@layout/item_user" />

    </android.support.constraint.ConstraintLayout>
</layout>