<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.dev.leo.testusers.data.models.Result"/>

        <import type="com.dev.leo.testusers.utils.StringUtils"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">
                <ImageView
                    tools:src="@mipmap/ic_launcher"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@null"
                    app:imageUrl="@{user.picture.large}"
                    app:errorImage="@{@drawable/ic_launcher_background}"
                    android:adjustViewBounds="true"
                    android:minHeight="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:text="@{String.format(@string/names, user.name.first, user.name.last)}"
                    tools:text="FirstName LastName"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@{String.format(@string/birth, StringUtils.getDateString(user.dob.date))}"
                    tools:text="@string/birth"
                    style="@style/UserDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@{String.format(@string/gender, user.gender)}"
                    tools:text="@string/gender"
                    style="@style/UserDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@{String.format(@string/location, user.location.city, user.location.street)}"
                    tools:text="@string/location"
                    style="@style/UserDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@{String.format(@string/email, user.email)}"
                    tools:text="@string/email"
                    style="@style/UserDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>